--- a/ficha.html
+++ b/ficha.html
@@ -400,7 +400,7 @@ import { HABILIDADES_CLASSE } from "./classes_db.js";
 import { ITENS_ESPECIAIS } from "./itens_db.js";
 import { PROPRIEDADES_GERAIS, PROPRIEDADES_ESPECIAIS, ENCANTAMENTOS_ARMAS, ENCANTAMENTOS_ESCUDOS, ENCANTAMENTOS_UNIFORMES } from "./propriedades_db.js";
 
-const WEBHOOK_URL = "SEU_LINK_DO_DISCORD_AQUI"; 
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1444085918196826192/BqSOdpPZa0F6m4pE4Wg3_QUUvgiXhCuwCk2xp43su6Jjhf4yx0zly68cO2bmSCRvLL38"; 
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 window.id = id;
@@ -881,3 +881,4 @@ document.getElementById('btnRollConfirm').onclick = () => { const dado = Math.fl
 </script>
 </body>
 </html>
+
